// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pregenerated-lib returns description of the service 1`] = `"SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service"`;

exports[`sdk-metadata generates the sdk metadata content for services with pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Usage Example",
      "instructions": "import { TestEntity } from '@sap/cloud-sdk-vdm-test-service';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "generationSteps": Object {
      "header": "Installation & Generation Steps",
      "instructions": "<ol type=\\"1\\"><li>Install <a href=\\"https://docs.npmjs.com/downloading-and-installing-node-js-and-npm\\">Node and npm</a>. We recommend the use of the LTS version.</li><li>Download the API specification from the Overview -&gt; API Specification section. Choose EDMX format.</li><li>Install the generator by running: <code><b>npm install -g @sap-cloud-sdk/generator</b></code></li><li>Generate a typed client by running the generator: <code><b>generate-odata-client --inputDir path/to/specification/ --outputDir path/to/client/</b></code></li></ol><p>You should now find generated classes in the output directory specified in step 4. By default, we generate TypeScript only. If you need to transpile it to JavaScript, check the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client#options\\"> CLI options in the documentation</a>.</p><p>If you encounter issues during generation, carefully check your configuration and refer to the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">extended documentation</a> on generating OData clients</a>.</p><p>Congratulations! Check the usage example below to import and use your generated OData client library.</p>",
      "text": "You can generate a typed OData client for this service on your own. Follow the instructions below to install the SAP Cloud SDK OData generator and complete the generation steps:",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Usage Example",
      "instructions": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "links": Object {
      "generationManual": Object {
        "name": "OData client generation manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      },
      "gettingStarted": Object {
        "name": "Getting Started with the SAP Cloud SDK for JavaScript",
        "url": "https://sap.github.io/cloud-sdk/docs/js/getting-started",
      },
      "overviewDocumentation": Object {
        "name": "OData consumption manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      },
      "sdkDocumentation": Object {
        "name": "The SAP Cloud SDK documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Get support or give feedback",
        "url": "https://sap.github.io/cloud-sdk/docs/overview/get-support",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": Object {
    "compatibilityNotes": "",
    "dependencyName": "@sap/cloud-sdk-vdm-test-service",
    "description": "SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service",
    "generatedAt": "/Date(0)/",
    "installLibrarySteps": Object {
      "header": "Installation",
      "instructions": "npm i @sap/cloud-sdk-vdm-test-service:latest",
      "text": "Add this client library as a dependency to your JavaScript project by running the npm command below in the root folder of your project. For more details take a look at our \\"Getting Started with the SAP Cloud SDK for JavaScript\\" guide in the \\"Helpful Links\\" menu.",
    },
    "repository": "npm",
    "repositoryLink": "https://www.npmjs.com/package/@sap/cloud-sdk-vdm-test-service",
    "version": "1.2.3",
  },
  "serviceStatus": Object {
    "status": "certified",
    "statusLongText": "You can download our pregenerated API client for this API.",
    "statusText": "API Client available for download",
  },
}
`;

exports[`sdk-metadata generates the sdk metadata content for services without pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Usage Example",
      "instructions": "import { TestEntity } from '@sap/cloud-sdk-vdm-test-service';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "generationSteps": Object {
      "header": "Installation & Generation Steps",
      "instructions": "<ol type=\\"1\\"><li>Install <a href=\\"https://docs.npmjs.com/downloading-and-installing-node-js-and-npm\\">Node and npm</a>. We recommend the use of the LTS version.</li><li>Download the API specification from the Overview -&gt; API Specification section. Choose EDMX format.</li><li>Install the generator by running: <code><b>npm install -g @sap-cloud-sdk/generator</b></code></li><li>Generate a typed client by running the generator: <code><b>generate-odata-client --inputDir path/to/specification/ --outputDir path/to/client/</b></code></li></ol><p>You should now find generated classes in the output directory specified in step 4. By default, we generate TypeScript only. If you need to transpile it to JavaScript, check the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client#options\\"> CLI options in the documentation</a>.</p><p>If you encounter issues during generation, carefully check your configuration and refer to the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">extended documentation</a> on generating OData clients</a>.</p><p>Congratulations! Check the usage example below to import and use your generated OData client library.</p>",
      "text": "You can generate a typed OData client for this service on your own. Follow the instructions below to install the SAP Cloud SDK OData generator and complete the generation steps:",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Usage Example",
      "instructions": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "links": Object {
      "generationManual": Object {
        "name": "OData client generation manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      },
      "gettingStarted": Object {
        "name": "Getting Started with the SAP Cloud SDK for JavaScript",
        "url": "https://sap.github.io/cloud-sdk/docs/js/getting-started",
      },
      "overviewDocumentation": Object {
        "name": "OData consumption manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      },
      "sdkDocumentation": Object {
        "name": "The SAP Cloud SDK documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Get support or give feedback",
        "url": "https://sap.github.io/cloud-sdk/docs/overview/get-support",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": undefined,
  "serviceStatus": Object {
    "status": "verified",
    "statusLongText": "The SAP Cloud SDK team checked for this API that generating a API client works, but no pregenerated client is available. You can generate your own client for this API.",
    "statusText": "API Client generation tested but no download available",
  },
}
`;
